project/test/syntax/good/Good63.ty
mutable class Action {

    actions: {
        action: () -> Void = {
            val newValue: Int = 3;
            Actions.something.something.somethingElse#doSomething(newValue)
        }
    }
}
